--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -17,6 +17,11 @@ default-features = false
 path = '../pallets/template'
 version = '4.0.0-dev'
 
+[dependencies.pallet-kitties]
+default-features = false
+path = '../pallets/kitties'
+version = '4.0.0-dev'
+
 [build-dependencies.substrate-wasm-builder]
 git = 'https://github.com/paritytech/substrate.git'
 tag = 'devhub/latest'
